feat: fully implemented validation with gookit
